Query stats incorrectly logs find explain on views

XMLWordPrintableJSON

    • Query Integration
    • Fully Compatible
    • ALL
    • v8.0, v7.0, v6.0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When a find is run on a view with explain, query stats logs the resolved aggregation. This is wrong for two reasons:

      1) find on a view should be logged as a find command by query stats, not the resolved aggregation

      2) find explain should not be captured by query stats

      The impact of this will be extra (and misleading) query stats entries.

            Assignee:
            Mariano Shaar
            Reporter:
            Alyssa Clark (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: