SERVER-92118 Disable query stats collection for find explain and count explain on views (#26515)

GitOrigin-RevId: f38a3f62e5f11b9578c337a08a2a67a0c8c349f7