jstests/noPassthrough/queryStats/query_stats_find_cmd_view.js
@@ -1,8 +1,8 @@
 /**
- * This tests confirms that a count command on a view is implemented as an aggregation but stored as
- * a count command query shape, and that explains are not collected.
+ * This tests confirms that a find command on a view is implemented as an aggregation but stored as
+ * a find command query shape, and that explains are not collected.
  *
- * @tags: [featureFlagQueryStatsCountDistinct]
+ * @tags: [requires_fcv_81]
  */
 
 import {
@@ -23,12 +23,12 @@ withQueryStatsEnabled(jsTestName(), (coll) => {
     coll.insert({a: 4, b: 1});
 
     // Create a view on the data.
-    const viewsDB = coll.getDB("view_count");
+    const viewsDB = coll.getDB("view_find");
     resetQueryStatsStore(viewsDB.getMongo(), "1MB");
     const collName = coll.getName();
     assert.commandWorked(viewsDB.runCommand({create: "identityView", viewOn: collName}));
 
-    const command = {count: "identityView", query: {a: 3}};
+    const command = {find: "identityView", filter: {a: 3}};
 
     // Check that collection is disabled for explain.
     assert.commandWorked(viewsDB.runCommand({explain: command}));
@@ -38,12 +38,12 @@ withQueryStatsEnabled(jsTestName(), (coll) => {
     // Delete entry from $queryStats command.
     resetQueryStatsStore(viewsDB.getMongo(), "1MB");
 
-    // Check that query statistics are stored for a count command, not an aggregate command.
+    // Check that query statistics are stored for a find command, not an aggregate command.
     assert.commandWorked(viewsDB.runCommand(command));
     const stats = getQueryStats(viewsDB.getMongo());
     assert.eq(1, stats.length, stats);
     const entry = getLatestQueryStatsEntry(viewsDB.getMongo(), {collName: "identityView"});
-    assert.eq("count", entry.key.queryShape.command, entry);
+    assert.eq("find", entry.key.queryShape.command, entry);
     assertAggregatedMetricsSingleExec(entry, {
         keysExamined: 0,
         docsExamined: 5,
@@ -55,9 +55,9 @@ withQueryStatsEnabled(jsTestName(), (coll) => {
     assertExpectedResults(entry,
                           entry.key,
                           /* expectedExecCount */ 1,
-                          /* expectedDocsReturnedSum */ 1,
-                          /* expectedDocsReturnedMax */ 1,
-                          /* expectedDocsReturnedMin */ 1,
-                          /* expectedDocsReturnedSumOfSq */ 1,
+                          /* expectedDocsReturnedSum */ 2,
+                          /* expectedDocsReturnedMax */ 2,
+                          /* expectedDocsReturnedMin */ 2,
+                          /* expectedDocsReturnedSumOfSq */ 4,
                           /* getMores */ false);
 });
